fixed footer form text covering button

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -35,15 +35,20 @@
       margin-bottom: 17px;
       position: relative;
       z-index: 1;
+      border-radius: 0px;
+      border-bottom: 1px solid $mainColor;
+
+      &--input-with-button {
+        padding-right: 57px;
+      }
 
       &:nth-child(3) {
         margin-bottom: 21px;
       }
       input {
-        border-radius: 0px;
+        box-sizing: border-box;
         width: 100%;
         border: none;
-        border-bottom: 1px solid $mainColor;
         padding-bottom: 12px;
         text-transform: uppercase;
         font-size: 16px;
